# voice-transcript

./: .gitignore  ACCEPTANCE.md  CLAUDE.md  Makefile  PLAN.md  README.en.md  README.md  SPEC.md  design_brief.md  eslint.config.js  package-lock.json  package.json  pipeline.yaml  pnpm-lock.yaml  test.txt  vitest.config.ts
.claude/: settings.json
.claude/agents/: tauri-capability-reviewer.md
.claude/rules/: ui.md
.claude/skills/tauri-command-scaffold/: SKILL.md
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  menu.rs
apps/desktop/src/i18n/: I18nContext.tsx  LanguageToggle.tsx  translations.ts
apps/desktop/src/lib/: path.ts  tauri.ts
apps/desktop/tests/: App.test.tsx  setup.ts
design/: reference-screen.html  tokens.css
docs/: contract.md  human-gates.md  ui-rules.starter.md
prompts/: 00-intake.md  01-criteria.md  02-design-gate.md  03-plan.md  04-build.md  readme.md  repair.md  survey.md
scripts/: gates.sh  run.sh
src/: args.ts  audio.ts  chunk.ts  cli.ts  config.ts  formats.ts  groq.ts  pipeline.ts
tests/: cli.test.ts  db-hygiene.test.ts  desktop-hygiene.test.ts  groq.test.ts  hygiene.test.ts  stitch.test.ts
tests/e2e/: desktop.integration.test.ts  history.integration.test.ts  integration.test.ts
(+34 files in other folders)
