[package]
name = "voice-transcript-desktop"
version = "0.0.0"
description = "Voice Transcript desktop app -- Rust shell + React webview, sharing @voice-transcript/core via a Node sidecar"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "voice_transcript_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2" }
